changes in name

--- a/book.html
+++ b/book.html
@@ -47,6 +47,9 @@
     <a href="./join.html" title="Home">Not a Member Yet?</a>
   </form>
   <hr>
-  <footer class="footer" title="Contacts">Address & Contacts:<br>Surrey Sports Park, University of Surrey, Richard Meyjes Road, Guildford Surrey, GU2 7AD Tel. 01483 689111</footer>
+  <footer class="footer" title="Contacts">
+    Address & Contacts:<br>
+    Greenfield Sports Centre, 123 Park Lane, Greenfield, GF1 2AB Tel. 01234 567890
+  </footer>
 </body>
 </html>
