--- a/join.html
+++ b/join.html
@@ -27,7 +27,7 @@
     Membership Type:<br>
     <input type="radio" name="membership" value="Gold">Gold
     <input type="radio" name="membership" value="Silver">Silver
-    <input type="radio" name="membership" value="TeamSurrey">TeamSurrey<br><br>
+    <input type="radio" name="membership" value="Team">Team<br><br>
     Address:<br>
     <input type="text" name="address"><br><br>
     Email:<br>
@@ -37,6 +37,9 @@
     <input type="submit" value="Join">
   </form>
   <hr>
-  <footer class="footer" title="Contacts">Address & Contacts:<br>Surrey Sports Park, University of Surrey, Richard Meyjes Road, Guildford Surrey, GU2 7AD Tel. 01483 689111</footer>
+  <footer class="footer" title="Contacts">
+   Address & Contacts:<br>
+    Greenfield Sports Centre, 123 Park Lane, Greenfield, GF1 2AB Tel. 01234 567890
+  </footer>
 </body>
 </html>
